<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="@string/pref_openmode"
        android:summary="Открывать файл при запуске приложения"
        android:title="Открытие файла" />

    <CheckBoxPreference
        android:key="@string/pref_underline"
        android:summary="Сделать весь текст подчеркнутым"
        android:title="Подчеркивание текста" />

    <EditTextPreference
        android:defaultValue="14"
        android:dialogTitle="Введите размер шрифта (от 10 до 32)"
        android:key="@string/pref_size"
        android:summary="Устанавливает новый размер шрифта"
        android:title="Размер шрифта" />


    <ListPreference
        android:key="@string/pref_style"
        android:title="Стиль для шрифта"
        android:summary="Устанавливает стиль для шрифта"
        android:defaultValue="1"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"
        android:dialogTitle="Выберите стиль для шрифта" />

    <ListPreference
        android:key="@string/pref_color"
        android:title="Выбор цвета текста"
        android:summary="Устанавливает цвет текста"
        android:defaultValue="1"
        android:entries="@array/text_color"
        android:entryValues="@array/text_color"
        android:dialogTitle="Выберите цвет текста" />



    <ListPreference
        android:key="@string/pref_background"
        android:title="Выбор цвета для фона"
        android:summary="Устанавливает цвет для фона"
        android:defaultValue="1"
        android:entries="@array/background_color"
        android:entryValues="@array/background_color"
        android:dialogTitle="Выберите цвет фона" />
    </PreferenceScreen>

